# provision

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli-credential-isolation.md  codex-app-server-integration.md  connector-abi.md  remote-e2e-control-plane.md
src/provision/: auth.py  cli.py  connector.py  daemon.py  launcher.py  paths.py  remote.py  store.py
tests/: test_store.py
tests/fixtures/codex_streams/: anonymized_control_plane_stream.jsonl
tools/: render_demo_assets.py
