[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provision"
version = "0.4.0"
description = "Local Codex CLI control plane, profile manager, and session dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Jeremy Dixon" },
]
keywords = [
  "account-manager",
  "chatgpt",
  "cli",
  "codex",
  "codex-cli",
  "credentials",
  "dashboard",
  "developer-tools",
  "local-first",
  "model-catalog",
  "openai",
  "profile-manager",
  "proxy",
  "quota",
  "session-manager",
  "terminal",
  "usage-monitoring",
  "websocket",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: System :: Shells",
]

[project.scripts]
provision = "provision.cli:main"

[project.urls]
Homepage = "https://github.com/jeremydixon22/provision"
Repository = "https://github.com/jeremydixon22/provision"
Issues = "https://github.com/jeremydixon22/provision/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
provision = ["assets/*.png"]
